; ModuleID = '/home/carl/AnghaBench/sumatrapdf/mupdf/source/pdf/extr_pdf-link.c_pdf_resolve_link.c'
source_filename = "/home/carl/AnghaBench/sumatrapdf/mupdf/source/pdf/extr_pdf-link.c_pdf_resolve_link.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [22 x i8] c"unknown link uri '%s'\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @pdf_resolve_link(i32* %0, i32* %1, i8* %2, float* %3, float* %4) #0 {
  %6 = alloca i32, align 4
  %7 = alloca i32*, align 8
  %8 = alloca i32*, align 8
  %9 = alloca i8*, align 8
  %10 = alloca float*, align 8
  %11 = alloca float*, align 8
  %12 = alloca i32, align 4
  %13 = alloca i8*, align 8
  %14 = alloca i8*, align 8
  store i32* %0, i32** %7, align 8
  store i32* %1, i32** %8, align 8
  store i8* %2, i8** %9, align 8
  store float* %3, float** %10, align 8
  store float* %4, float** %11, align 8
  %15 = load i8*, i8** %9, align 8
  %16 = icmp ne i8* %15, null
  br i1 %16, label %17, label %65

17:                                               ; preds = %5
  %18 = load i8*, i8** %9, align 8
  %19 = getelementptr inbounds i8, i8* %18, i64 0
  %20 = load i8, i8* %19, align 1
  %21 = sext i8 %20 to i32
  %22 = icmp eq i32 %21, 35
  br i1 %22, label %23, label %65

23:                                               ; preds = %17
  %24 = load i8*, i8** %9, align 8
  %25 = getelementptr inbounds i8, i8* %24, i64 1
  %26 = call i32 @fz_atoi(i8* %25)
  %27 = sub nsw i32 %26, 1
  store i32 %27, i32* %12, align 4
  %28 = load float*, float** %10, align 8
  %29 = icmp ne float* %28, null
  br i1 %29, label %33, label %30

30:                                               ; preds = %23
  %31 = load float*, float** %11, align 8
  %32 = icmp ne float* %31, null
  br i1 %32, label %33, label %63

33:                                               ; preds = %30, %23
  %34 = load i8*, i8** %9, align 8
  %35 = call i8* @strchr(i8* %34, i8 signext 44)
  store i8* %35, i8** %13, align 8
  %36 = load i8*, i8** %9, align 8
  %37 = call i8* @strrchr(i8* %36, i8 signext 44)
  store i8* %37, i8** %14, align 8
  %38 = load i8*, i8** %13, align 8
  %39 = icmp ne i8* %38, null
  br i1 %39, label %40, label %62

40:                                               ; preds = %33
  %41 = load i8*, i8** %14, align 8
  %42 = icmp ne i8* %41, null
  br i1 %42, label %43, label %62

43:                                               ; preds = %40
  %44 = load float*, float** %10, align 8
  %45 = icmp ne float* %44, null
  br i1 %45, label %46, label %52

46:                                               ; preds = %43
  %47 = load i8*, i8** %13, align 8
  %48 = getelementptr inbounds i8, i8* %47, i64 1
  %49 = call i32 @fz_atoi(i8* %48)
  %50 = sitofp i32 %49 to float
  %51 = load float*, float** %10, align 8
  store float %50, float* %51, align 4
  br label %52

52:                                               ; preds = %46, %43
  %53 = load float*, float** %11, align 8
  %54 = icmp ne float* %53, null
  br i1 %54, label %55, label %61

55:                                               ; preds = %52
  %56 = load i8*, i8** %14, align 8
  %57 = getelementptr inbounds i8, i8* %56, i64 1
  %58 = call i32 @fz_atoi(i8* %57)
  %59 = sitofp i32 %58 to float
  %60 = load float*, float** %11, align 8
  store float %59, float* %60, align 4
  br label %61

61:                                               ; preds = %55, %52
  br label %62

62:                                               ; preds = %61, %40, %33
  br label %63

63:                                               ; preds = %62, %30
  %64 = load i32, i32* %12, align 4
  store i32 %64, i32* %6, align 4
  br label %69

65:                                               ; preds = %17, %5
  %66 = load i32*, i32** %7, align 8
  %67 = load i8*, i8** %9, align 8
  %68 = call i32 @fz_warn(i32* %66, i8* getelementptr inbounds ([22 x i8], [22 x i8]* @.str, i64 0, i64 0), i8* %67)
  store i32 -1, i32* %6, align 4
  br label %69

69:                                               ; preds = %65, %63
  %70 = load i32, i32* %6, align 4
  ret i32 %70
}

declare dso_local i32 @fz_atoi(i8*) #1

declare dso_local i8* @strchr(i8*, i8 signext) #1

declare dso_local i8* @strrchr(i8*, i8 signext) #1

declare dso_local i32 @fz_warn(i32*, i8*, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
